[package]
name = "pmtiles2"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/disasterscience/pmtiles-rs/"
documentation = "https://docs.rs/pmtiles2"
readme = "README.md"
description = "A low level implementation of the PMTiles format based around Tokio."
categories = ["encoding", "parser-implementations", "parsing"]
keywords = ["pmtiles", "format", "pmtile", "encoding", "decoding"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hilbert_2d = "1"
deku = "0.15"
integer-encoding = { version = "3.0", features = ["tokio_async"] }
flate2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
brotli = "3.3"
zstd = { version = "0.11", default-features = false }
ahash = { version = "0.8.2", default-features = false, features = [
    "std",
    "no-rng",
] }
async-compression = { version = "0.3.15", features = [
    "tokio",
    "zstd",
    "gzip",
    "brotli",
] }
async-recursion = { version = "1.0.4" }
tracing = "0.1.40"
tokio = { version = "1.27.0", features = ["fs", "sync", "io-util"] }
anyhow = "1.0.81"
thiserror = "1.0.58"
blake3 = { version = "1.5.1", features = ["rayon", "mmap"] }
async-trait = "0.1.79"
walkdir = "2.5.0"
crossbeam-channel = "0.5.12"
futures = { version = "0.3.30", default-features = false }

[dev-dependencies]
temp-dir = "0.1"
tokio = { version = "1.27.0", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# tokio-test = "0.4.2"
# tokio-util = { version = "0.7.7", features = ["compat"] }
